# topohedral-optimize

./: Cargo.toml  activate.zsh
.github/workflows/: ci.yml
assets/: bracket.json  bracket.py  dcsrch.py  functions.py  line_search.py  minimise-scalar-bounded.json  minimise-scalar-brent.json  minimise-vector.py  minimize-scalar.py  requirements.txt
src/: common.rs  lib.rs
src/line_search/: common.rs  factory.rs  interp.rs  mod.rs  thuente.rs  utils.rs
src/unconstrained/: common.rs  conjugate_gradient.rs  mod.rs
tests/: conjugate_gradient.rs  functions.rs  line_search.rs
