[package]
name = "topohedral-optimize"
version = "0.0.0"
edition = "2021"
[features]
enable_trace = ["topohedral-tracing/enable_trace"]

[dependencies]
approx = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.21"
thiserror = "1.0.65"
topohedral-tracing = { version = "0.0.1", registry = "cloudsmith"}
topohedral-linalg= { version = "0.1.0", registry = "cloudsmith"}

[dev-dependencies]
ctor = "0.2.8"
rstest = "0.24.0"